# ebpf-net-monitor

./: .gitignore  CLAUDE.md  README.md  cabal.project  ebpf-net-monitor.cabal
.github/workflows/: build.yml
bpf/: monitor.bpf.c
cbits/: Makefile.bpf  arena.h  monitor.c  monitor.h
scripts/: gen-vmlinux.sh
src/: FFI.hs  Main.hs  Stream.hs  TUI.hs
test/: FFITest.hs  Main.hs  StreamTest.hs
test/cbits/: Makefile  test_monitor.c  utest.h
