cabal-version: 3.0
name:          ebpf-net-monitor
version:       0.1.0
synopsis:      eBPF network packet monitor with Haskell TUI
license:       MIT
build-type:    Simple

-- Type-check only target: no C deps, no linking.
-- Usage: cabal build lib:typecheck
library typecheck
  visibility:       private
  default-language: Haskell2010
  hs-source-dirs:   src test
  exposed-modules:
      FFI
    , Stream
    , TUI
    , Main
    , FFITest
    , StreamTest

  build-depends:
      base               >= 4.16  && < 5
    , streamly            >= 0.10
    , streamly-core       >= 0.2
    , brick               >= 2.0
    , vty                 >= 6.0
    , vty-unix            >= 0.2
    , vty-crossplatform   >= 0.4
    , stm                 >= 2.5
    , containers          >= 0.6
    , bytestring          >= 0.11
    , tasty               >= 1.4
    , tasty-hunit         >= 0.10
    , tasty-quickcheck    >= 0.10
    , QuickCheck          >= 2.14

  ghc-options: -Wall -fno-code -fwrite-interface

executable ebpf-net-monitor
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
      FFI
    , Stream
    , TUI

  build-depends:
      base               >= 4.16  && < 5
    , streamly            >= 0.10
    , streamly-core       >= 0.2
    , brick               >= 2.0
    , vty                 >= 6.0
    , vty-unix            >= 0.2
    , vty-crossplatform   >= 0.4
    , stm                 >= 2.5
    , containers          >= 0.6
    , bytestring          >= 0.11

  c-sources:        cbits/monitor.c
  include-dirs:     cbits
  includes:         monitor.h arena.h
  extra-libraries:  bpf elf z
  cc-options:       -DOOM_COMMIT -Wall -Wextra -O2
  ghc-options:      -Wall -O2 -threaded -rtsopts "-with-rtsopts=-N"

test-suite tests
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   test src
  main-is:          Main.hs
  other-modules:
      FFITest
    , StreamTest
    , FFI
    , Stream
    , TUI

  build-depends:
      base               >= 4.16  && < 5
    , tasty               >= 1.4
    , tasty-hunit         >= 0.10
    , tasty-quickcheck    >= 0.10
    , QuickCheck          >= 2.14
    , streamly            >= 0.10
    , streamly-core       >= 0.2
    , brick               >= 2.0
    , vty                 >= 6.0
    , vty-unix            >= 0.2
    , vty-crossplatform   >= 0.4
    , stm                 >= 2.5
    , containers          >= 0.6
    , bytestring          >= 0.11

  c-sources:        cbits/monitor.c
  include-dirs:     cbits
  includes:         monitor.h arena.h
  -- No extra-libraries for test suite: monitor_init/poll are stubbed on non-Linux
  cc-options:       -DOOM_COMMIT -Wall -Wextra -O2
  ghc-options:      -Wall -O2 -threaded
